fix issues with skills div being too smaller on mobile / responsive screens

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -249,7 +249,7 @@ img {
     background-color: #1c2237;
     border: 1px solid #fff;
     color: #fff;
-    width: 250px;
+    width: 450px;
     border-radius: 20px;
   }
   .home__hero-img {
